# ESTAS-AQUABC

./: .gitignore  .pre-commit-config.yaml  AQUABC02GFREL  AQUABC02INTL  AQUABC_FRONTEND_ANALYSIS_AND_PLAN.md  AQUABC_Model_Equations.md  CHANGELOG.md  CONTRIBUTING.md  ESTAS_II  ESTAS_II_gf_fast  ESTAS_II_gf_release  FIXES_AND_IMPROVEMENTS.md  FORTRAN_ANALYSIS_REPORT.md  FORTRAN_IMPLEMENTATION_PLAN.md  FTNCHEK_TRIAGE.md  INPUT.txt  INPUT.txt.20260117_113619.bak  INPUT.txt.20260117_223515.bak  INPUT.txt.20260117_231952.bak  INPUT.txt.20260117_231956.bak  INPUT.txt.20260118_010012.bak  INPUT.txt.20260119_121320.bak  INPUT_TEST.txt  INPUT_gf_debug.txt  INPUT_gf_fast.txt  INPUT_gf_release.txt  INPUT_ifort_release.txt  Makefile  OUTPUT.csv  PARAMETER_REFERENCE.md  README.md  TODO_IMPLEMENTATION_PLAN.md  app.R  data  implicit_none_lint_report.txt  missing_implicit_none.txt  pyproject.toml  requirements-dev.txt  requirements.txt
Archive/: WCONST_02.txt  WCONST_02_old.txt  WCONST_03.txt
INPUTS/: ADVECTIVE_LINKS.txt  ALLELOPATHIC_INFORMATION.txt  BATHYMETRY_1.txt  BATHYMETRY_10.txt  BATHYMETRY_11.txt  BATHYMETRY_12.txt  BATHYMETRY_13.txt  BATHYMETRY_14.txt  BATHYMETRY_15.txt  BATHYMETRY_16.txt  BATHYMETRY_17.txt  BATHYMETRY_18.txt  BATHYMETRY_19.txt  BATHYMETRY_2.txt  BATHYMETRY_20.txt  BATHYMETRY_21.txt  BATHYMETRY_22.txt  BATHYMETRY_23.txt  BATHYMETRY_24.txt  BATHYMETRY_25.txt  BATHYMETRY_3.txt  BATHYMETRY_4.txt  BATHYMETRY_5.txt  BATHYMETRY_6.txt  BATHYMETRY_7.txt  BATHYMETRY_8.txt  BATHYMETRY_9.txt  BOTTOM_SEDIMENT_MODEL_INPUT.txt  CRITICAL_SHEAR_STRESSES.txt  DISPERSIVE_LINKS.txt  EXTRA_WCONST.txt  EXTRA_WCONST_zero.txt  FLUXES_FOR_MUDDY_SEDIMENTS.txt  FLUXES_FOR_MUDDY_SEDIMENTS_HYPOXIA.txt  FLUXES_FOR_MUDDY_SEDIMENTS_HYPOXIA_full.txt  FLUXES_FOR_MUDDY_SEDIMENTS_HYPOXIA_zero.txt  FLUXES_FOR_MUDDY_SEDIMENTS_zero.txt  FLUXES_FOR_SANDY_SEDIMENTS.txt  (+30 more)
(+180 files in other folders)
